--- a/views/esercitazioni.pug
+++ b/views/esercitazioni.pug
@@ -26,6 +26,6 @@ block content
                 div(class='three columns')
                     br
                     label
-                    input(type='submit' class='button-primary' value='seleziona' id='selecArgBUtton')
+                    input(type='submit' class='button-primary' value='seleziona' id='selecArgBUtton' class ='u-full-width')
         
         hr
