--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html(lang='it')
   body
     div(class='container' id='layout-container')
       div(class='row' class='navbar-row')
-        nav(id='nav')
+        nav(class='nav')
           ul(class='u-pull-right')
             li
               a(id='home' href='/') Home
