--- a/views/training.pug
+++ b/views/training.pug
@@ -5,7 +5,11 @@ block content
         var answerList = !{answerList}
     script(type='text/javascript' src='/javascripts/correzione.js')
     div(class='container')
-        h4= title
+        div(class='row')
+            div(class='nine columns')
+                h4 Esercitazione
+            div(class='three columns')
+                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo3.png")
         br
         form(id='trainingForm')
             each question, i in questionList
