cambio di layout

--- a/views/contatti.pug
+++ b/views/contatti.pug
@@ -2,5 +2,8 @@ extends layout
 
 block content
     div(class='container')
-
-        h4= title
+        div(class='row')
+            div(class='nine columns')
+                h4 Contatti
+            div(class='three columns')
+                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
