--- a/views/esercitazioni.pug
+++ b/views/esercitazioni.pug
@@ -8,7 +8,7 @@ block content
                 h4 Esercitazioni
                 p In questa pagina sono disponibili, suddivisi per materia, i quiz a risposta multipla forniti da Regione Lombardia per l'ottenimento della abilitazione al censimento e al prelievo selettivo degli ungulati e alla caccia al cinghiale in forma collettiva. Selezionare un argomento e la quantità di domande desiderata, dopo aver studiato la parte teorica relativa.
             div(class='three columns')
-                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo3.png")
+                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
         br
         
         br
