--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html(lang='it')
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
     
   body
-    div(class='container' id='layout-container')
+    div(class='container' class='layout-container')
       div(class='row' class='navbar-row')
         nav(class='nav')
           ul(class='u-pull-right')
