--- a/views/login.pug
+++ b/views/login.pug
@@ -18,7 +18,7 @@ block content
                             i(class="fa fa-exclamation-triangle" aria-hidden="true")
                             | #{errLoginMsg}
             div(class='three columns')
-                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo3.png")
+                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
         
                 
             
