--- a/views/simulazionesami.pug
+++ b/views/simulazionesami.pug
@@ -8,7 +8,7 @@ block content
                 h4 Simulazione Esami
                 p Selezionare la prova d'esame desiderata per svolgere una simulazione con i quiz forniti da Regione Lombardia. Le domande sono estratte in modo casuale rispettando i quantitativi per materia previsti e riportati nella tabella sottostante
             div(class='three columns')
-                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo3.png")
+                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
         br
         form(method='GET' id='examform' action='init')
             div(class='row')
@@ -20,7 +20,7 @@ block content
                 div(class='six columns')
                     br
                     label
-                    input(type='submit' class='button-primary' value='seleziona' id='selecExamButton')
+                    input(type='submit' class='button-primary' class='u-full-width' value='seleziona' id='selecExamButton')
 
         table(class='u-full-width')
             caption Descrizione esame 
