--- a/views/training.pug
+++ b/views/training.pug
@@ -9,7 +9,7 @@ block content
             div(class='nine columns')
                 h4 Esercitazione
             div(class='three columns')
-                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo3.png")
+                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
         br
         form(id='trainingForm')
             each question, i in questionList
