--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,12 @@
 html {
-  background: url(/images/pexels-tomas-anunziata-695207-ConvertImage.jpg) no-repeat center center fixed;
+  background-color: #f0f1f1;
+  /* background: url(/images/pexels-pixabay-326240.jpg) no-repeat center center fixed; */
   background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  
 }
 
 /* nav ul li{
@@ -16,6 +18,11 @@ hr {
   margin-bottom: 0px;
 }
 
+#header-hr {
+  margin-top: 0px
+}
+
+
 i {
   margin-right: 5px;
 }
@@ -25,9 +32,8 @@ input {
 }
 
 .info-weather {
-  background-color: lightskyblue;
   margin: 0px;
-  padding: 3px;
+  padding: 0px;
   font-size: x-small;
   font-weight: bold;
   text-transform: uppercase;
@@ -35,22 +41,25 @@ input {
   text-align: center;
   max-width: 20%;
   height: auto;
+  border-radius: 6px;
+  display: inline-block;
 }
 
 .weather-icon>img {
-  max-width: 35%;
+  max-width: 30%;
   height: auto;
 }
 
 article {
-  background-color: white;
+  background-color: #f0f1f1;
   padding: 3px;
+  margin: 20px;
 }
 
 .container {
-  background-color: #e6decc;
+  background-color: white;
   padding: 5px;
-  opacity: 0.9;
+  color: #2f3837;
 }
 
 .navbar-row {
@@ -67,7 +76,9 @@ article {
 .nav a {
   text-decoration: none;
   color: white;
-  font-weight: bold;
+  font-weight: 600;
+  text-transform: uppercase;
+
 }
 
 .nav a:hover {
@@ -77,7 +88,15 @@ article {
 .info-weather {
   border-radius: 6px;
   padding: 0px;
-  margin: 0px;
+  margin: 5px;
+  max-width: 20%;
+  height: auto;
+  display: inline-block;
+  
+}
+
+#weather-row {
+background-color: lightsteelblue;
 }
 
 #download-box ul {
@@ -113,7 +132,7 @@ article {
   text-decoration: underline;
 }
 
-#layout-container {
+.layout-container {
   margin-top: 20px;
   border-radius: 6px 6px 0 0;
   background-color: #2F3837;
@@ -160,6 +179,7 @@ footer .container {
   background-color: #FF6347;
   padding-left: 5px;
   border-radius: 2px;
+  margin: 5px;
 }
 
 @media screen and (max-width: 961px) {
@@ -174,6 +194,10 @@ footer .container {
   }
   .container {
     padding: 2px;
+  }
+
+  .weather-desc {
+    display: none;
   }
 }
 
