--- a/views/downloads.pug
+++ b/views/downloads.pug
@@ -14,6 +14,6 @@ block content
                                 i(class="fa fa-download" aria-hidden="true")
                                     a(href=files[index] download = 'download')= val.split('_-_')[1]    
             div(class='three columns')
-                img(class='u-max-full-width' src="/images/urca-logo3.png") 
+                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png") 
         hr
                 
