--- a/views/post.pug
+++ b/views/post.pug
@@ -7,7 +7,7 @@ block content
                 h4(class='u-full-width' class='post-title')= blogPost.Titolo  
                 time(class='post-date')= `${blogPost.Data.getDate()}/${blogPost.Data.getMonth() + 1}/${blogPost.Data.getFullYear()}`
             div(class='three columns')
-                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo3.png")
+                img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
         if blogPost.Media_Paths.length > 0
             div(class='row')
                 div(class='seven columns')
