--- a/views/error.pug
+++ b/views/error.pug
@@ -5,6 +5,7 @@ block content
     div(class='nine columns')
       h4= message
       h5= error.status
+      pre #{error.stack}
     div(class='three columns')
-      img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo3.png")
+      img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
     
