--- a/views/esercitazioni.pug
+++ b/views/esercitazioni.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     div(class='container')
-        div(class='row')
+        div(class='row' class='page-title')
             div(class='nine columns')
                 h4 Esercitazioni
                 p In questa pagina sono disponibili, suddivisi per materia, i quiz a risposta multipla forniti da Regione Lombardia per l'ottenimento della abilitazione al censimento e al prelievo selettivo degli ungulati e alla caccia al cinghiale in forma collettiva. Selezionare un argomento e la quantità di domande desiderata, dopo aver studiato la parte teorica relativa.
