--- a/views/simulazionesami.pug
+++ b/views/simulazionesami.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     div(class='container')
-        div(class='row')
+        div(class='row' class='page-title')
             div(class='nine columns')
                 h4 Simulazione Esami
                 p Selezionare la prova d'esame desiderata per svolgere una simulazione con i quiz forniti da Regione Lombardia. Le domande sono estratte in modo casuale rispettando i quantitativi per materia previsti e riportati nella tabella sottostante
