--- a/views/training.pug
+++ b/views/training.pug
@@ -4,7 +4,7 @@ block content
     script(type='text/javascript').
         var answerList = !{answerList}
     div(class='container')
-        div(class='row')
+        div(class='row' class='page-title')
             div(class='nine columns')
                 h4 Esercitazione
             div(class='three columns')
