--- a/views/upload.pug
+++ b/views/upload.pug
@@ -2,7 +2,8 @@ extends layout
 
 block content
     div(class='container')
-        div(class='row')
-            div(class='twelve columns')
-                p File #[em #{file}] caricato correttamente.
-                     
+        div(class='row' class='page-title')
+            div(class='nine columns')
+                | Files caricati correttamente.
+            div(class='three columns')
+                    img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
