--- a/views/contatti.pug
+++ b/views/contatti.pug
@@ -2,8 +2,10 @@ extends layout
 
 block content
     div(class='container')
-        div(class='row')
+        div(class='row' class='page-title')
             div(class='nine columns')
-                h4 Contatti
+                h4
+                    i(class='fa fa-address-book-o' aria-hidden="true")
+                    | Contatti
             div(class='three columns')
                 img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
