--- a/views/downloads.pug
+++ b/views/downloads.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     div(class='container' id='download-box')
-        div(class='row')
+        div(class='row' class='page-title')
             div(class='nine columns')
                 h4
                     i(class="fa fa-download" aria-hidden="true")
