--- a/views/error.pug
+++ b/views/error.pug
@@ -2,10 +2,11 @@ extends layout
 
 block content
   div(class='container')
-    div(class='nine columns')
-      h4= message
-      h5= error.status
-      pre #{error.stack}
-    div(class='three columns')
-      img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
-    
+    div(class='row' class='page-title')
+      div(class='nine columns')
+        h4= message
+        h5= error.status
+        pre #{error.stack}
+      div(class='three columns')
+        img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
+      
