--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,7 @@ input, button {
 }
 
 .layout-container {
-  margin-top: 20px;
+  margin-top: 10px;
   border-radius: 6px 6px 0 0;
   background-color: #2F3837;
 }
@@ -71,25 +71,27 @@ input, button {
 
 .bars-btn {
   color: #FF5434;
-  font-size: 30px;
-  margin-right: 20px;
+  font-size: 27px;
+  margin-right: 17px;
   cursor: pointer;
   display: none;
 }
 
 .info-weather {
-  font-size: x-small;
-  font-weight: bold;
+  width: 25%;
   text-transform: uppercase;
+  font-size: xx-small;
+  font-weight: bold;
   color: white;
   text-align: center;
-  max-width: 20%;
   height: auto;
   display: inline-block;
+  margin: 0;
+  padding: 0;
 }
 
-.weather-icon>img {
-  max-width: 30%;
+.weather-icon {
+  max-width: 15%;
   height: auto;
 }
 
@@ -155,7 +157,7 @@ footer .container {
 }
 
 .footer-text {
-  font-size: x-small;
+  font-size: small;
 }
 
 @media (max-width: 400px) {
@@ -210,6 +212,10 @@ footer .container {
     padding: 2px;
     border-radius: 0;
   }
+  .weather-icon {
+    max-width: 35%;
+    height: auto;
+  }
   .weather-desc {
     display: none;
   }
@@ -218,5 +224,8 @@ footer .container {
   }
   input[type=radio]:checked+span {
     background-color: sandybrown;
+  }
+  .footer-text {
+    font-size: x-small;
   }
 }
