--- a/views/index.pug
+++ b/views/index.pug
@@ -5,14 +5,12 @@ block content
     header
       div(class='row')
         img(class='u-max-full-width' src='/images/URCA-ORIZZONTALE.jpg' id='urca-image') 
-      br
       div(class='row' id='weather-row')
-        div(class='info-weather')
-          div(class='city-name')
-            | Cremona
-            div(class='weather-icon')
-            div(class='weather-desc')
-            div(class='temperature-value')
+        //- div(class='info-weather')
+        //-   div(class='city-name')
+        //-   div(class='weather-icon')
+        //-   div(class='weather-desc')
+        //-   div(class='temperature-value')
 
       hr(id='header-hr')
     each item in blogPosts
