--- a/views/post.pug
+++ b/views/post.pug
@@ -5,13 +5,13 @@ block content
         div(class='row' class='page-title')
             h4(class='u-full-width' class='post-title')= blogPost.Titolo  
             time(class='post-date')= `${blogPost.Data.getDate()}/${blogPost.Data.getMonth() + 1}/${blogPost.Data.getFullYear()}`
-        if blogPost.Media_Paths.length > 0
+        if blogPost.Temp_Media_Paths.length > 0
             div(class='row')
                 div(class='seven columns')
                     | !{blogPost.Testo}  
                 div(class='five columns') 
-                    each path in blogPost.Media_Paths
-                        img(src= path.slice(path.indexOf('/')), alt="" class='u-max-full-width' class='post-image')
+                    each item in blogPost.Immagini
+                        img(src=`data:${item.contentType};base64,${item.data.toString('base64')}` class='u-max-full-width' class='post-image')
         else
             div(class='row')
                 | !{blogPost.Testo}
