--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='it')
   head
     meta(charset='utf-8')
-    meta(meta name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title= title
     link(rel="shortcut icon", href="/images/icourca.png")
     link(rel='stylesheet', href='/stylesheets/skeleton.css')
@@ -21,7 +21,7 @@ html(lang='it')
             li
               a(id='home' href='/') Home
             li
-              a(href='#') Chi siamo
+              a(href='/chisiamo.html') Chi siamo
             li
               a(href='/downloads/') Downloads
             li
