--- a/views/contatti.pug
+++ b/views/contatti.pug
@@ -7,5 +7,8 @@ block content
                 h4
                     i(class='fa fa-address-book-o' aria-hidden="true")
                     | Contatti
+                p SEDE: VIA LAGO GERUNDO 22 C COSTA S. ABRAMO 26020 (CR) 
+                p TEL:0372/451337 FAX 0372/449007
+                p E-MAIL: urcacremona@virgilio.it 
             div(class='three columns')
                 img(class='u-max-full-width' class='urca-banner' src="/images/urca-logo.png")
