--- a/views/training.pug
+++ b/views/training.pug
@@ -1,8 +1,6 @@
 extends layout
 
 block content
-    script(type='text/javascript').
-        var answerList = !{answerList}
     div(class='container')
         div(class='row' class='page-title')
             div(class='nine columns')
@@ -14,7 +12,7 @@ block content
             each question, i in questionList
                 div(class='u-full-width' class='question-box')
                     h6(class='question-arg')= question.Argomento
-                    fieldset
+                    fieldset(data-correct-answer=`${question.Risposta_Esatta}`)
                         legend(class='question')= `${i + 1}) ${question.Domanda}` 
                         each risposta, j in question.Risposte
                             label(class='answer')
