--- a/views/esercitazioni.pug
+++ b/views/esercitazioni.pug
@@ -26,5 +26,6 @@ block content
                     br
                     label
                     input(type='submit' class='button-primary' value='seleziona' id='selecArgBUtton' class ='u-full-width')
-        
+        form(method='POST' id='errform' action='risposterrate')
+            input(type='submit' class='button-primary' value='RISPOSTE ERRATE')
     script(type='text/javascript' src='/javascripts/paginaEsercitazioni.js')
