--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   div(class='container')
     header
       div(class='row')
-        img(class='u-max-full-width' src='/images/URCA-ORIZZONTALE.jpg' id='urca-image') 
+        img(class='u-max-full-width' src='/images/URCA-ORIZZONTALE2.png' id='urca-image') 
       div(class='row' id='weather-row')
 
     hr(id='header-hr')
