--- a/views/layout.pug
+++ b/views/layout.pug
@@ -42,5 +42,5 @@ html(lang='it')
           div(class='twelve columns')
             hr
           div(class='row')
-              p(class='u-pull-left' class='footer-text') U.R.C.A. sezione di Cremona in collaborazione con U.N. Enalacaccia P.T. sezione di Cremona
+              p(class='u-pull-left' class='footer-text') U.R.C.A. sezione di Cremona in collaborazione con U.N. Enalcaccia P.T. sezione di Cremona
               img(src='/images/logo_enalcaccia_piccolo.png' class='u-pull-right')
